--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       src="https://kit.fontawesome.com/d60683b07f.js"
       crossorigin="anonymous"
     ></script>
-    <link href="../dist/output.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <div class="outer">
