updates mobile style

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               >
             </div>
           </div>
-          <div id="laptop-graphics" class="pl-[130px] pb-3 pr-0 lg:w-1/2 w-0">
+          <div id="laptop-graphics" class="pl-0 lg:pl-[130px] pb-3 pr-0 lg:w-1/2 w-0">
             <div
               class="hidden lg:block h-[500px] rounded-l-full overflow-hidden"
             >
