--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <p class="text-2xl leading-relaxed">
                 &ldquo;With Floats I can beat the competition in both
                 presentation quality, and speed to market... from PDF to
-                interative candidate profiles in minutes!&rdquo;
+                interactive candidate profiles in minutes!&rdquo;
               </p>
               <p class="text-sm font-light my-6">
                 Paul Henderson <em>* name changed</em>
