--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               found their destinies intertwined. Shaun, a tech connoisseur and
               recruitment maven, and Scott, a maestro of design and development
               and hiring teams, were united by a shared discontent &hyphen; the
-              lacklustre state of the tech recruitment cosmos. 🌌
+              lacklustre state of the tech recruitment cosmos.
             </p>
           </div>
           <div class="hidden md:block w-1/2 relative">
