only poppins font

--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
       content="Floats.ai is a game-changing platform for the modern recruiter. Reimagine recruitment. Streamline your outreach. Modernize your process."
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
     <script
@@ -74,11 +66,11 @@
           >
             <div class="flex gap-x-2 items-center">
               <i class="fa-regular fa-gem text-2xl mr-1"></i>
-              <h5 class="uppercase font-lexend-deca text-xs tracking-[0.25rem]">
+              <h5 class="uppercase text-xs tracking-[0.25rem]">
                 Sneak peak highlights
               </h5>
             </div>
-            <h5 class="z-10 font-lexend-deca text-24xl w-full leading-tight">
+            <h5 class="z-10 text-24xl w-full leading-tight">
               Still sending PDF CVs? It&apos;s time for change
             </h5>
             <ul class="mb-1 z-10">
@@ -157,7 +149,7 @@
           >
             <div class="flex gap-x-2 items-center">
               <i class="fa-solid fa-hands-clapping text-2xl mr-1"></i>
-              <h5 class="uppercase font-lexend-deca text-xs tracking-[0.25rem]">
+              <h5 class="uppercase text-xs tracking-[0.25rem]">
                 What our customers say
               </h5>
             </div>
@@ -177,7 +169,7 @@
               class="max-w-[492px] p-10 bg-darkblue rounded-md text-white flex flex-col gap-y-10"
             >
               <a name="sign-up"></a>
-              <h4 class="text-3xl font-lexend-deca">
+              <h4 class="text-3xl">
                 Step into the modern era of recruitment tech.
               </h4>
               <form
@@ -298,9 +290,7 @@
           <div
             class="w-full md:w-1/2 pt-12 pb-16 text-white min-h-[400px] pr-8"
           >
-            <h4 class="text-4xl font-lexend-deca mb-8">
-              So where did this come from?
-            </h4>
+            <h4 class="text-4xl mb-8">So where did this come from?</h4>
             <p class="leading-7 tracking-wide font-light mb-4">
               Welcome aboard the Floats starship, where the future of
               recruitment transcends the confines of antiquated CRMs and ATSs.
@@ -406,11 +396,11 @@
           >
             <div class="flex gap-x-2 items-center">
               <i class="fa-regular fa-gem text-2xl mr-1"></i>
-              <h5 class="uppercase font-lexend-deca text-xs tracking-[0.25rem]">
+              <h5 class="uppercase text-xs tracking-[0.25rem]">
                 Sneak peak highlights
               </h5>
             </div>
-            <h5 class="z-10 font-lexend-deca text-24xl w-full leading-tight">
+            <h5 class="z-10 text-24xl w-full leading-tight">
               Ok, just a few more then...
             </h5>
             <ul class="mb-1 z-10">
@@ -445,9 +435,7 @@
               class="max-w-[492px] p-10 bg-darkblue rounded-md text-white flex flex-col gap-y-10"
             >
               <a name="sign-up-2"></a>
-              <h4 class="text-3xl font-lexend-deca">
-                Ready to supercharge your outreach?
-              </h4>
+              <h4 class="text-3xl">Ready to supercharge your outreach?</h4>
               <form
                 class="flex flex-col gap-y-6"
                 action="https://floats.us21.list-manage.com/subscribe/post?u=2bf6a98eb8e2066ad99fcc95b&amp;id=b656c3932b&amp;f_id=008559e1f0"
