--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                   value="Join the waitlist"
                   name="subscribe"
                   id="mc-embedded-subscribe"
-                  class="cursor-pointer self-start mt-4 rounded-md text-white border-white border hover:border-white/30 px-8 py-3 font-semibold hover:bg-white/20 ease-linear duration-200"
+                  class="cursor-pointer self-start mt-4 rounded-md text-white border-white border hover:border-white/30 px-8 py-3 hover:bg-white/20 ease-linear duration-200"
                 />
               </form>
             </div>
@@ -500,7 +500,7 @@
                   value="Join the waitlist"
                   name="subscribe"
                   id="mc-embedded-subscribe"
-                  class="cursor-pointer self-start mt-4 rounded-md text-white border-white border hover:border-white/30 px-8 py-3 font-semibold hover:bg-white/20 ease-linear duration-200"
+                  class="cursor-pointer self-start mt-4 rounded-md text-white border-white border hover:border-white/30 px-8 py-3 hover:bg-white/20 ease-linear duration-200"
                 />
               </form>
             </div>
