hide anchor tags so they don't affect padding

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div
               class="max-w-[492px] p-10 bg-darkblue rounded-md text-white flex flex-col gap-y-10"
             >
-              <a name="sign-up"></a>
+              <a name="sign-up" class="hidden"></a>
               <h4 class="text-3xl">
                 Step into the modern era of recruitment tech.
               </h4>
@@ -434,7 +434,7 @@
             <div
               class="max-w-[492px] p-10 bg-darkblue rounded-md text-white flex flex-col gap-y-10"
             >
-              <a name="sign-up-2"></a>
+              <a name="sign-up-2" class="hidden"></a>
               <h4 class="text-3xl">Ready to supercharge your outreach?</h4>
               <form
                 class="flex flex-col gap-y-6"
