--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
           </div>
           <div id="sign-up-form" class="w-full lg:w-1/2 relative">
             <div
-              class="max-w-[492px] p-10 bg-darkblue rounded-md text-white flex flex-col gap-y-10"
+              class="max-w-[492px] p-10 bg-darkblue rounded-md text-white flex flex-col"
             >
-              <a name="sign-up" class="hidden"></a>
-              <h4 class="text-3xl">
-                Step into the modern era of recruitment tech.
+              <a name="sign-up"></a>
+              <h4 class="text-3xl mb-9">
+                Step into the modern era of recruitment tech
               </h4>
               <form
                 class="flex flex-col gap-y-6"
@@ -432,10 +432,10 @@
           </div>
           <div id="sign-up-form" class="w-full lg:w-1/2 relative">
             <div
-              class="max-w-[492px] p-10 bg-darkblue rounded-md text-white flex flex-col gap-y-10"
+              class="max-w-[492px] p-10 bg-darkblue rounded-md text-white flex flex-col"
             >
-              <a name="sign-up-2" class="hidden"></a>
-              <h4 class="text-3xl">Ready to supercharge your outreach?</h4>
+              <a name="sign-up-2"></a>
+              <h4 class="text-3xl mb-9">Ready to supercharge your outreach?</h4>
               <form
                 class="flex flex-col gap-y-6"
                 action="https://floats.us21.list-manage.com/subscribe/post?u=2bf6a98eb8e2066ad99fcc95b&amp;id=b656c3932b&amp;f_id=008559e1f0"
