revised our story

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div
           class="max-w-[1440px] w-full mx-auto flex flex-col items-center gap-y-4 px-2 pt-9 pb-[112px]"
         >
-          <div class="z-10 mb-[114px] w-[287px] h-[77px]">
+          <div class="z-10 mb-[104px] w-[287px] h-[77px]">
             <img width="100%" src="images/logo-white.svg" alt="floats.ai" />
           </div>
           <h1
@@ -37,7 +37,7 @@
             A game-changing platform for the modern recruiter
           </h1>
           <h3
-            class="z-10 leading-8 font-light w-full md:w-[710px] tracking-wider text-white text-center"
+            class="z-10 mb-1 leading-8 font-light w-full md:w-[710px] tracking-wider text-white text-center"
           >
             Reimagine recruitment. Streamline your outreach. Modernize your
             process.
@@ -110,22 +110,22 @@
           </div>
           <div
             id="laptop-graphics"
-            class="pl-0 lg:pl-[130px] pb-3 pr-0 lg:w-1/2 w-0"
+            class="pl-0 lg:pl-[110px] pb-3 pr-0 lg:w-1/2 w-0"
           >
             <div
-              class="hidden lg:block h-[500px] rounded-l-full overflow-hidden"
+              class="hidden lg:block h-[500px] xl:w-[142%] w-[160%] rounded-full overflow-hidden"
             >
               <img
-                src="images/laptop.png"
+                src="images/laptop.jpg"
                 class="object-cover h-full"
                 alt="Laptop"
               />
             </div>
             <div
-              class="absolute bottom-[380px] lg:bottom-[130px] right-0 w-[133px] h-[153px] bg-lightblue opacity-70 rounded-l-full"
+              class="absolute bottom-[380px] lg:bottom-[130px] -right-[100px] w-[213px] h-[153px] bg-lightblue opacity-70 rounded-full"
             ></div>
             <div
-              class="absolute bottom-[250px] lg:-bottom-[24px] right-0 w-[227px] h-[213px] bg-pink opacity-80 rounded-l-full"
+              class="absolute bottom-[250px] lg:-bottom-[24px] -right-[100px] w-[327px] h-[213px] bg-pink opacity-80 rounded-full"
             ></div>
           </div>
         </div>
@@ -320,60 +320,58 @@
           </div>
         </div>
       </div>
-      <div id="feature-list" class="w-full">
+      <div id="our-story" class="w-full">
         <div
           class="relative mx-auto max-w-[1440px] w-full flex flex-col gap-y-12 lg:flex-row gap-x-16 pt-0 pb-16 px-9 lg:px-0"
         >
-          <div
-            class="xl:pl-[200px] lg:pl-[90px] pl-0 pb-4 lg:w-1/2 w-full flex flex-col gap-y-4"
-          >
-            <div class="w-5/6 bg-lightblue/20 p-3 -rotate-12">
+          <div class="pb-4 lg:w-1/2 w-full flex relative">
+            <div
+              class="z-10 rounded-full w-[1000px] h-[600px] overflow-hidden -ml-[220px] relative"
+            >
               <img
-                src="images/scott-and-shaun.jpg"
+                src="images/scott-and-shaun.png"
                 alt="Scott and Shaun"
-                class="w-full"
+                class="h-full absolute right-0 -bottom-[40px] object-cover"
               />
             </div>
-            <p class="mt-6 leading-7 tracking-wide font-light">
-              The genesis was an unassuming reference call. 📞 Shaun dialed
-              Scott, whose name had graced a referral for a recent placement. As
-              their conversation meandered through the stars, they discovered a
-              shared yearning for a recruitment realm that was not just
-              efficient but also visually enthralling and intuitive. 💡
-            </p>
-            <p class="leading-7 tracking-wide font-light">
-              Thus, in the fertile soils of innovation, ‘Floats’ took root. 🌱
-            </p>
+            <div
+              class="absolute z-0 top-[380px] right-[360px] bg-lightblue opacity-70 rounded-full overflow-hidden w-[600px] h-[380px]"
+            ></div>
+            <div
+              class="absolute z-0 top-[140px] right-[50px] bg-pink rounded-full overflow-hidden w-[1000px] h-[454px]"
+            ></div>
           </div>
           <div
-            class="xl:pr-[200px] md:pr-[90px] pr-0 pl-0 pb-4 lg:w-1/2 w-full flex flex-col gap-y-4"
+            id="highlights-text"
+            class="pr-4 md:pr-[90px] xl:pr-[200px] pb-4 mt-14 lg:w-1/2 w-full flex flex-col gap-y-4"
           >
-            <p class="leading-7 tracking-wide font-light">
-              Floats is not merely a platform; it&apos;s the start of a
-              revolution. With a mission to catapult recruitment into the
-              digital era, Floats challenges the status quo. Bid farewell to the
-              legacy email and PDF resume duet, and embrace visually stunning,
-              interactive profiles that empower recruiters to present candidates
-              in a light never seen before. 🎨
+            <div class="flex gap-x-2 items-center mb-4">
+              <div><img src="images/logo-black.svg" alt="Floats" /></div>
+              <h5 class="uppercase text-xs tracking-[0.25rem]">Our story</h5>
+            </div>
+            <h5 class="z-10 text-24xl mb-4 w-full leading-tight">
+              Welcome aboard the Floats starship
+            </h5>
+            <p class="leading-wider font-light mb-3">
+              Welcome aboard the Floats starship, where the future of
+              recruitment transcends the confines of antiquated CRMs and ATSs.
+              Here, we don't just adapt to change ‐ we are the change.
             </p>
-            <p class="leading-7 tracking-wide font-light">
-              But Floats is not just a feast for the eyes. It&apos;s the essence
-              of elegance and efficiency. It empowers recruiters with a
-              distinctive edge, enhances client credibility, and streamlines
-              workflows through AI-powered wizardry, enabling you to showcase
-              your finest candidates with personalisation and scale. 🤖
+            <p class="leading-wider font-light mb-4">
+              Once upon a starlit night, two trailblazers named Shaun and Scott
+              found their destinies intertwined. Shaun, a tech connoisseur and
+              recruitment maven, and Scott, a maestro of design and development
+              and hiring teams, were united by a shared discontent &hyphen; the
+              lacklustre state of the tech recruitment cosmos.
             </p>
-            <p class="leading-7 tracking-wide font-light">
-              As we continue to forge ahead and innovate, we extend an
-              invitation to join Shaun, Scott, and the crew of Floats on this
-              odyssey into the unknown. Together, let&apos;s reshape the
-              recruitment tapestry and usher in a new era of boundless
-              possibilities. 🌟
-            </p>
-            <p class="leading-7 tracking-wide font-light">
-              Embark on the journey with Floats - where recruitment meets
-              renaissance.
-            </p>
+            <div class="flex gap-x-2 text-darkblue">
+              <i class="fa-solid fa-book text-xl pr-1"></i>
+              <a
+                href="https://www.linkedin.com/company/floats-ai/"
+                class="underline hover:no-underline"
+                >Read the full journey on Medium</a
+              >
+            </div>
           </div>
         </div>
       </div>
@@ -426,7 +424,7 @@
                 <i
                   class="fa-solid fa-check text-green text-xl leading-none pr-6"
                 ></i>
-                Integrate with&nbsp;<em>nearly</em>&nbsp;any CRM or ATS
+                <p>Integrate with<em> nearly </em>any CRM or ATS</p>
               </li>
             </ul>
           </div>
